# favicon-service

favicon_function/: README.md  pyproject.toml
favicon_function/favicon_function/: README.md  extract_favicon.py  main.py
favicon_function/tests/: test_extract_favicon.py
favicon_service/: Dockerfile  README.md  favicon  favicon.go  favicon_test.go  go.mod  go.sum
